WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105265
Style fix to OpenCL SVG Filters
https://bugs.webkit.org/show_bug.cgi?id=105265
Summary
Style fix to OpenCL SVG Filters
Tamas Czene
Reported
2012-12-18 01:32:06 PST
Inserted missing spaces and correct copyright text. There were no vital changes.
Attachments
proposed patch
(10.85 KB, patch)
2012-12-18 01:34 PST
,
Tamas Czene
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tamas Czene
Comment 1
2012-12-18 01:34:19 PST
Created
attachment 179903
[details]
proposed patch
Zoltan Herczeg
Comment 2
2012-12-18 01:53:46 PST
Comment on
attachment 179903
[details]
proposed patch róme.
WebKit Review Bot
Comment 3
2012-12-18 01:57:15 PST
Comment on
attachment 179903
[details]
proposed patch Clearing flags on attachment: 179903 Committed
r137999
: <
http://trac.webkit.org/changeset/137999
>
WebKit Review Bot
Comment 4
2012-12-18 01:57:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug