Style fix to OpenCL SVG Filters https://bugs.webkit.org/show_bug.cgi?id=105265

Patch by Tamas Czene <tczene@inf.u-szeged.hu> on 2012-12-18
Reviewed by Zoltan Herczeg.

Inserted missing spaces and correct copyright text. There were no vital changes.

* platform/graphics/gpu/opencl/FilterContextOpenCL.cpp:
(WebCore):
* platform/graphics/gpu/opencl/FilterContextOpenCL.h:
(FilterContextOpenCL):
* platform/graphics/gpu/opencl/OpenCLFEColorMatrix.cpp:
(WebCore::FilterContextOpenCL::applyFEColorMatrix):
* platform/graphics/gpu/opencl/OpenCLFETurbulence.cpp:
(WebCore):
(WebCore::FilterContextOpenCL::compileFETurbulence):
(WebCore::FilterContextOpenCL::applyFETurbulence):
(WebCore::FETurbulence::platformApplyOpenCL):
* platform/graphics/gpu/opencl/OpenCLHandle.h:

Canonical link: https://commits.webkit.org/123506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137999 268f45cc-cd09-0410-ab3c-d52691b4dbfc